<resources>
    <string name="app_name">MyPassWordWallet</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="repeatedpasswordname">Repeat Password</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="signIn">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup">Signup</string>
</resources>
