<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.isfp.ahmed.mypasswordwallet.core.Signup"
    tools:showIn="@layout/activity_signup">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname" />

    <EditText
        android:id="@+id/newusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:password="true" />

    <EditText
        android:id="@+id/repeatnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeatedpasswordname"
        android:password="true" />

    <Button
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup" />
</LinearLayout>
